--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #f7f7f9;
@@ -14,7 +18,9 @@ body {
 
 /* Header */
 header {
-  background: linear-gradient(90deg, black, #332222);
+  /*background-color: black;*/
+  /*background: linear-gradient(90deg, black, #332222);*/
+  background: linear-gradient(90deg, black, #160f0f);
   color: white;
   padding: 1rem 2rem;
   display: flex;
@@ -27,15 +33,28 @@ header {
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
-.logo::before {
-  content: "⚡";
+.logo-icon {
+  height: 80px;
+  display: inline-block;
+}
+
+.logo-text-line1 {
+
+}
+
+.logo-text-line2 {
+  font-size: .7rem;
+  color: #fce200;
 }
 
 .nav-links {
   list-style: none;
-  display: none;
+  display: flex;
   /*flex;*/
   justify-content: center;
   align-items: center;
@@ -52,7 +71,7 @@ header {
 }
 
 .nav-links a:hover {
-  color: #ffddff;
+  color: #fce200;
 }
 
 .call-btn {
@@ -312,6 +331,10 @@ footer {
   .logo {
     font-size: 1.2rem;
     font-weight: bold;
+  }
+
+  .logo-icon {
+    height: 56px;
   }
 
   header nav {
